fix article background color and text alignment

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -578,7 +578,7 @@ h3.title {
   z-index: 100;
   top: 0;
   left: 0;
-  background: $color_secondary;
+  background: #fff;
   -webkit-transform-origin: 0 0;
   transform-origin: 0 0;
 }
@@ -637,9 +637,12 @@ h3.title {
   padding: 60px 60px 80px 60px;
   pointer-events: none;
   font-size: 0.85em;
+  .title {
+    text-align: left;
+  }
   p {
     max-width: 1200px;
-    margin: 1em auto;
+    margin: 1em 0;
     text-align: justify;
   }
   p:first-of-type {
